--- a/form/Header.tmpl
+++ b/form/Header.tmpl
@@ -4,9 +4,10 @@
     <head>
         <title>Golang Mysql Curd Example</title>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=2">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     </head>
     <body>
+	<div class="container">
         <h1>Golang Mysql Curd Example</h1>   
 {{ end }}
